--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
   const INITIAL_CENTER = [40.09, -76.3];
   const INITIAL_ZOOM   = 10;
   const SMOOTH = { animate: true, duration: 1.0, easeLinearity: 0.2 };
+  const SOLVED_COLOR   = '#009944'; // match keyframes 100%
+  const SOLVED_WEIGHT  = 6;         // match .correct-final stroke-width
+  const SOLVED_OPACITY = 0.7;       // match keyframes 100%
+
 
 
 
