--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ function normalizeCorrectOverlays() {
         pane: 'solvedPane',
         renderer: roadsRenderer,
         interactive: false,
-        style: { color: '#36a15a', weight: 7, opacity: 0.65, lineCap: 'round' }
+        style: { color: SOLVED_COLOR, weight: SOLVED_WEIGHT, opacity: SOLVED_OPACITY, lineCap: 'round' }
       }).addTo(map);
       l.__hasSolvedOverlay = true;
     }
