--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ function scrubHiddenRoadsBlue() {
 
       if (isBlue(cs.stroke) || attrStroke === '#00ccff' || attrStroke === '#3388ff') {
         // ✅ Tag as "correct" so our unified CSS style applies
-        p.setAttribute('data-correct', '1');
+       // p.setAttribute('data-correct', '1');
 
         // Strip inline stroke so CSS wins
         p.style.stroke = '';
