--- a/index.html
+++ b/index.html
@@ -1475,6 +1475,7 @@ if (currentLayerDepth === 3) {
     if (map.hasLayer(roadsLayerGroup))  map.removeLayer(roadsLayerGroup);
     if (map.hasLayer(roadsBufferGroup)) map.removeLayer(roadsBufferGroup);
   } catch {}
+clearSolvedOverlays();
 hideSolvedPane();
 
   // 2) Make sure MT is visible and CLICKABLE again at county depth
