--- a/index.html
+++ b/index.html
@@ -1570,6 +1570,7 @@ if (countyLayerRef) {
       if (typeof roadsBufferGroup !== 'undefined' && map.hasLayer(roadsBufferGroup))  map.removeLayer(roadsBufferGroup);
       if (typeof worldMask !== 'undefined' && worldMask) { map.removeLayer(worldMask); worldMask = null; }
     } catch {}
+clearSolvedOverlays();
 hideSolvedPane();
 
     // Restore county polygon UI (optional safeguard)
