--- a/index.html
+++ b/index.html
@@ -1503,6 +1503,7 @@ if (currentLayerDepth === 3) {
   } catch {}
 clearSolvedOverlays();
 hideSolvedPane();
+clearSolvedPaneLayers();
 
   // 2) Make sure MT is visible and CLICKABLE again at county depth
   try {
