--- a/index.html
+++ b/index.html
@@ -1599,6 +1599,7 @@ if (countyLayerRef) {
     } catch {}
 clearSolvedOverlays();
 hideSolvedPane();
+clearSolvedPaneLayers();
 
     // Restore county polygon UI (optional safeguard)
     try {
