--- a/index.html
+++ b/index.html
@@ -619,10 +619,10 @@ function rebuildCountyMask() {
     try { worldMask.eachLayer(l => { const el = l.getElement?.(); if (el) el.style.pointerEvents = 'none'; }); } catch {}
   } catch {}
 }
-  function drawHintOverlay(layer) {
-  showSolvedPane();  // make sure pane is visible
+  // ORANGE (always wins; replaces green if present)
+function drawHintOverlay(layer) {
+  showSolvedPane();                  // visible only inside MT (Step 1 governs calls)
 
-  // hide base
   const el = layer.getElement?.();
   layer.setStyle({ color: 'transparent', opacity: 0, weight: 0 });
   layer.options.interactive = false;
@@ -634,21 +634,17 @@ function rebuildCountyMask() {
     el.removeAttribute('stroke-width');
   }
 
-  // recreate the orange overlay each time to avoid stale flags
-  try { if (layer.__hintOverlay) map.removeLayer(layer.__hintOverlay); } catch {}
+  removeSolvedOverlay(layer);        // ensure green is gone
+
   const ov = L.geoJSON(layer.feature, {
     pane: 'solvedPane',
-    renderer: roadsRenderer,       // should be L.svg({...})
+    renderer: roadsRenderer,
     interactive: false,
     style: { color: HINT_COLOR, weight: HINT_WEIGHT, opacity: HINT_OPACITY, lineCap: 'round' }
   }).addTo(map);
   layer.__hintOverlay = ov;
-
-  // precedence: orange takes visual priority over green
   layer.__hasHintOverlay = true;
-  layer.__hasSolvedOverlay = false;
 }
-
 function removeHintOverlay(layer) {
   try {
     if (layer.__hintOverlay) { map.removeLayer(layer.__hintOverlay); layer.__hintOverlay = null; }
